# WindowsSamples

./: .gitattributes  .gitignore  LICENSE  README.md  ReadMe.knief
direct_ui/: CMakeLists.txt
direct_ui/demos/test_app/: CMakeLists.txt  precompile.h  test_app.cc
direct_ui/dui/: CMakeLists.txt
direct_ui/dui/include/dui/: dui.h
direct_ui/dui/include/dui/core/: dui_application.h  dui_bitmap.h  dui_canvas.h  dui_color.h  dui_config.h  dui_control_manager.h  dui_control_manager_client.h  dui_mouse.h  dui_point.h  dui_rect.h  dui_size.h  dui_window.h  dui_window_event.h  dui_window_type.h
direct_ui/dui/include/dui/window/: dui_edit_window.h  dui_tooltip_window.h
direct_ui/dui/src/: dui_precompile.cc  dui_precompile.h
direct_ui/dui/src/core/: dui_application.cc  dui_bitmap.cc  dui_canvas.cc  dui_control_manager.cc  dui_real_application.cc  dui_real_application.h  dui_real_bitmap.cc  dui_real_bitmap.h  dui_real_canvas.cc  dui_real_canvas.h  dui_real_window.cc  dui_real_window.h  dui_window.cc  dui_window_priv.cc  dui_window_priv.h
direct_ui/dui/src/core/win/: dui_gdi_real_bitmap_win.cc  dui_gdi_real_bitmap_win.h  dui_gdi_real_canvas_win.cc  dui_gdi_real_canvas_win.h  dui_real_application_win.cc  dui_real_window_win.cc  dui_real_window_win.h  gdi_render_engine.cc  gdi_render_engine.h
direct_ui/dui/src/window/: dui_edit_window.cc  dui_tooltip_window.cc
direct_ui/dui/src/window/win/: dui_edit_window_win.cc  dui_edit_window_win.h  dui_tooltip_window_win.cc  dui_tooltip_window_win.h
qui_d3d11/: CMakeLists.txt
qui_d3d11/cmake/: QUI_macros.cmake
qui_d3d11/d3d11_core/: CMakeLists.txt
qui_d3d11/d3d11_core/include/qui/: qui.h
qui_d3d11/d3d11_core/include/qui/core/: qui_define.h  qui_export.h  qui_prerequisites.h  qui_size.h  qui_version.h
qui_d3d11/d3d11_core/include/qui/d3d11/: qui_d3d11.h  qui_d3d11_window.h
qui_d3d11/d3d11_core/src/: qui_internal.h  qui_precompile.cc  qui_precompile.h
qui_d3d11/d3d11_core/src/core/: qui_application.cc  qui_window.cc
qui_d3d11/d3d11_core/src/d3d11/: qui_d3d11.cc  qui_d3d11_dds_texture_loader.cc  qui_d3d11_implementor.cc  qui_d3d11_implementor.h  qui_d3d11_window.cc
qui_d3d11/demos/d3d11_tutorial01/: tutorial01.cc
qui_templates/: CMakeLists.txt  change.log.md
qui_templates/cmake/: QUI_variables.cmake
qui_templates/demos/template_tutorial01/: .gitignore  CMakeLists.txt  precompile.h  tutorial01.cc
qui_templates/template_core/: CMakeLists.txt  change.log.md
qui_templates/template_core/include/qui/: qui.h
qui_templates/template_core/include/qui/core/: qui_application.h  qui_main_window.h  qui_point.h  qui_rect.h  qui_std_headers.h  qui_window.h
qui_templates/template_core/include/qui/template/: qui_template.h
qui_templates/template_core/src/core/: qui_debug.cc  qui_main_window.cc  qui_window.cc
qui_templates/template_core/src/template/: qui_template.cc
qui_win32/: CMakeLists.txt  change.log.md
qui_win32/cmake/: FindQUI.cmake  qui_macros.cmake  qui_variables.cmake
qui_win32/demos/test_app/: CMakeLists.txt  test_app.cc
qui_win32/demos/test_app/skin/: .gitignore
qui_win32/qui/: CMakeLists.txt  change.log.md
qui_win32/qui/include/qui/: qui.h
qui_win32/qui/include/qui/core/: qui_application.h  qui_bitmap.h  qui_bitmap_base.h  qui_canvas.h  qui_canvas_base.h  qui_color.h  qui_control.h  qui_paint_manager.h  qui_point.h  qui_prerequisites.h  qui_rect.h  qui_size.h  qui_types.h  qui_window.h  qui_window_types.h
qui_win32/qui/include/qui/utils/: qui_string.h
qui_win32/qui/include/qui/window/: qui_main_window.h
qui_win32/qui/src/core/: qui_application.cc  qui_bitmap.cc  qui_canvas.cc  qui_control.cc  qui_math_p.h  qui_paint_manager.cc  qui_real_gdi_bitmap.cc  qui_real_gdi_bitmap.h  qui_real_gdi_canvas.cc  qui_real_gdi_canvas.h  qui_window.cc  qui_window_p.h
qui_win32/qui/src/utils/: qui_string.cc
qui_win32/qui/src/window/: qui_main_window.cc
qui_win32/template/: change.log.template
